--- a/package.json
+++ b/package.json
@@ -12,15 +12,27 @@
     "test:ci": "jest --ci --coverage"
   },
   "dependencies": {
-    "@prisma/client": "^5.13.0",
+    "@apollo/client": "^3.5.6",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^5.12.1",
+    "apollo-server-micro": "^3.6.1",
+    "graphql": "^16.8.1",
+    "graphql-fields": "^2.0.3",
+    "graphql-scalars": "^1.23.0",
+    "micro": "^9.3.4",
+    "micro-cors": "^0.1.1",
     "next": "13.5.6",
+    "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "type-graphql": "^2.0.0-rc.1",
+    "typegraphql-prisma": "^0.27.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.6",
+    "@types/micro-cors": "^0.1.5",
     "@types/node": "^20.8.7",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
@@ -43,6 +55,7 @@
     "prisma": "^5.13.0",
     "tailwindcss": "^3",
     "ts-node": "^10.9.1",
+    "typegraphql-prisma": "^0.27.2",
     "typescript": "^5"
   }
 }
