--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@prisma/client": "^5.13.0",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.9.0",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
