--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.9.0",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
     "type-graphql": "^2.0.0-rc.1",
     "typegraphql-prisma": "^0.27.2"
   },
