--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@apollo/client": "^3.5.6",
     "@prisma/client": "^5.13.0",
     "apollo-server-micro": "^3.6.1",
+    "formik": "^2.4.6",
     "graphql": "^16.8.1",
     "graphql-fields": "^2.0.3",
     "graphql-scalars": "^1.23.0",
@@ -23,10 +24,11 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-router-dom": "^6.9.0",
     "react-icons": "^5.2.1",
+    "react-router-dom": "^6.9.0",
     "type-graphql": "^2.0.0-rc.1",
-    "typegraphql-prisma": "^0.27.2"
+    "typegraphql-prisma": "^0.27.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
