--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.6",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.13.0",
     "apollo-server-micro": "^3.6.1",
     "formik": "^2.4.6",
@@ -22,6 +23,8 @@
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
     "next": "13.5.6",
+    "next-auth": "^4.24.7",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
