--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@apollo/client": "^3.5.6",
     "@prisma/client": "^5.13.0",
     "apollo-server-micro": "^3.6.1",
+    "chart.js": "^4.4.3",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.6",
     "graphql": "^16.8.1",
     "graphql-fields": "^2.0.3",
@@ -23,6 +25,7 @@
     "micro-cors": "^0.1.1",
     "next": "13.5.6",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.9.0",
@@ -33,6 +36,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
+    "@types/date-fns": "^2.6.0",
     "@types/jest": "^29.5.6",
     "@types/micro-cors": "^0.1.5",
     "@types/node": "^20.12.11",
